# real_estate_toolkit

./: README.md  pyproject.toml
ABP1/: porcentaje_de_poblacion_con_diabetes_en_españa_por_nivel_de_ingresos_del_hogar.csv
Documents/real_estate_toolkit/: .gitignore  pyproject.toml
Documents/real_estate_toolkit/src/real_estate_toolkit/data/: loader.py
practical4/: add.py  evenoddnumber.py  factorial.py  inputoutput.py  mean.py  perfectnumbers.py  potencia.py
src/real_estate_toolkit/: main.py
src/real_estate_toolkit/agent_based_model/: consumers.py  house_market.py  houses.py  simulation.py
src/real_estate_toolkit/analytics/: exploratory.py
src/real_estate_toolkit/data/: cleaner.py  descriptor.py  loader.py
src/real_estate_toolkit/ml_models/: predictor.py
