[tool.poetry]
name = "real-estate-toolkit"
version = "0.1.0"
description = ""
authors = ["Inés Calet <ines.calet01@estudiant.upf.edu>",
        "Aina Olesti <aina.olesti01@estudiant.upf.edu>",
        "Iao Armengol <iao.armengol01@estudiant.upf.edu>",
        "Manar Chentouf <manar.chentouf01@estudiant.upf.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
